# duckdb-server-cpp

./: .gitignore  ARCHITECTURE.md  BUILD_WINDOWS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  DESIGN.md  DuckArrowFlight.sln  DuckDB-Arrow-Server-Design.pptx  DuckDbServer.sln  PERFORMANCE.md  PROTOCOL.md  PROTOCOL_GRPC.md  README.md  build_grpc.bat  generate_proto.bat  run_benchmark.bat  run_client.bat  run_cpp_server.bat  run_rust_server.bat  run_server.bat  vcpkg.json
benchmark/: BenchmarkResult.cs  BenchmarkRunner.cs  DuckArrowBenchmark.csproj  DuckArrowBenchmark.sln  DuckDbBenchmark.csproj  Program.cs  packages.config
client/: ArrowStreamReader.cs  ArrowValueConverter.cs  DasException.cs  DasFlightClient.cs  DasFlightPool.cs  DataTableExtensions.cs  DuckArrowClient.csproj  DuckArrowClient.sln  DuckDbClient.cs  DuckDbClient.csproj  DuckDbException.cs  Example.cs  FlightQueryResult.cs  Interfaces.cs  packages.config
cpp/: DuckDbServerCpp.vcxproj  DuckFlightServerCpp.vcxproj
diagrams/: class-diagram.drawio  duckdb-grpc-architecture.drawio  sequence-query.drawio  sequence-write.drawio  system-architecture.drawio
include/: connection_pool.hpp  duck_bridge.hpp  flight_server.hpp  grpc_server.hpp  insert_batcher.hpp  interfaces.hpp  write_serializer.hpp
proto/: duckdb_service.proto
rust-server/: Cargo.toml  build.rs
rust-server/src/: cache.rs  main.rs  pool.rs  shard.rs  writer.rs
server/: App.config  ArrowTypeConverter.cs  ColumnBuilder.cs  ConnectionPool.cs  DatabaseManager.cs  DdlDetector.cs  DuckArrowServer.csproj  DuckArrowServer.sln  DuckDbServer.cs  DuckDbServer.csproj  DuckFlightServer.cs  FlightProto.cs  IConnectionPool.cs  IQueryCache.cs  IWriteSerializer.cs  InsertBatcher.cs  InsertParser.cs  IpcMessageSplitter.cs  Program.cs  QueryCache.cs  RecordBatchBuilder.cs  ServerConfig.cs  ShardedDuckDb.cs  WriteSerializer.cs  packages.config
shared/: DuckDbProto.cs  DuckDbShared.csproj  packages.config
src/: connection_pool.cpp  duck_bridge.cpp  flight_server.cpp  grpc_server.cpp  main.cpp  main_grpc.cpp
