[package]
name = "duckdb-grpc-server"
version = "5.0.0"
edition = "2021"
description = "High-performance DuckDB gRPC server (Rust edition)"

[[bin]]
name = "duckdb-grpc-server"
path = "src/main.rs"

[dependencies]
# ── gRPC framework ──────────────────────────────────────────────────────────
tonic = "0.12"          # gRPC server/client framework built on hyper + tower
prost = "0.13"          # Protobuf serialization (code-gen'd by tonic-build)
tokio = { version = "1", features = ["full"] }  # Async runtime (multi-threaded scheduler)

# ── DuckDB database ────────────────────────────────────────────────────────
duckdb = { version = "1.1", features = ["bundled", "vtab-arrow"] }
    # bundled: compiles DuckDB from source (no system install needed)
    # vtab-arrow: enables query_arrow() for zero-copy columnar results
arrow = { version = "54", default-features = false, features = ["ipc"] }
    # Apache Arrow columnar format — version must match duckdb's arrow dep
    # ipc feature enables Arrow IPC StreamWriter for QueryArrow RPC

# ── Utilities ───────────────────────────────────────────────────────────────
clap = { version = "4", features = ["derive"] }   # CLI argument parsing with derive macros
crossbeam = "0.8"       # Lock-free ArrayQueue for ConnectionPool (faster than Mutex<VecDeque>)
num_cpus = "1"          # Detect hardware thread count for auto-sizing pool
tokio-stream = "0.1"    # ReceiverStream adapter for tonic server-streaming RPCs

[build-dependencies]
tonic-build = "0.12"    # Protobuf/gRPC code generator (runs at cargo build time)
